--- a/public/register.html
+++ b/public/register.html
@@ -262,6 +262,18 @@
       };
     }
   </script>
+  <script>
+    fetch('/check-session')
+      .then(res => res.json())
+      .then(data => {
+        if (data.loggedIn) {
+          document.getElementById('login-link').style.display = 'none';
+          document.getElementById('register-link').style.display = 'none';
+          document.getElementById('profile-link').style.display = 'inline-block';
+          document.getElementById('logout-link').style.display = 'inline-block';
+        }
+      });
+  </script>
 
 </body>
 </html>
